<resources>
    <string name="app_name">Money Manager Mobile</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_repeat">Repeat password</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">You login as</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="password_can_equals">\"Passwords can be equals!</string>
    <string name="password_cannot_empty">Password cannot be empty!</string>
    <string name="email_cannot_empty">Email cannot be empty!</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="others">Others</string>
    <string name="accounts">Accounts</string>
    <string name="incomes">Incomes</string>
    <string name="expenses">Expenses</string>
    <string name="service_unavalible">Service is unavailable :(</string>
    <string name="balance">Balance</string>
    <string name="day">Day:</string>
    <string name="week">Week:</string>
    <string name="month">Month:</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="value">Value</string>
    <string name="currency">Currency</string>
    <string name="category">Category</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="type">Type</string>
    <string name="add_income">Add income</string>
    <string name="add_expenses">Add expenses</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="are_you_sure_delete_account">Are you sure you want to delete account?</string>
    <string name="add_accounts">Add Accounts</string>
    <string name="add">Add</string>
    <string name="close">Close</string>
    <string name="category_name">Category Name</string>
    <string name="edit">Edit</string>
    <string name="change">Change</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New Password</string>
    <string name="repeat_new_password">Repeat new password</string>
</resources>
