<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_accounts"
            android:icon="@drawable/ic_accounts"
            android:title="@string/accounts" />
        <item
            android:id="@+id/nav_incomes"
            android:icon="@drawable/ic_transactions"
            android:title="@string/incomes" />
        <item
            android:id="@+id/nav_cexpenses"
            android:icon="@drawable/ic_transactions"
            android:title="@string/expenses" />
    </group>

    <item android:title="@string/others">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/settings" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logoff"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
