<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:mask="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/errorTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#f00"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:textSize="20dp"
        android:text="@string/date"/>


    <br.com.sapereaude.maskedEditText.MaskedEditText
        android:id="@+id/editDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:typeface="monospace"
        android:hint="YYYYMMDDHHMM"
        mask:allowed_chars="1234567890"
        mask:mask="####-##-## ##:##"
        app:keep_hint="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:textSize="20dp"
        android:text="@string/description"/>

    <EditText
        android:id="@+id/editDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:textSize="20dp"
        android:text="@string/value"/>

    <EditText
        android:id="@+id/editValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:textSize="20dp"
        android:text="@string/currency"/>

    <Spinner
        android:id="@+id/accountSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:textSize="20dp"
        android:text="@string/category"/>

    <Spinner
        android:id="@+id/categorySpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/btn_dropdown"
        android:spinnerMode="dropdown"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        tools:context=".LoginActivity"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonDeleteTrans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:visibility="gone"
            android:text="@string/delete"/>

        <Button
            android:id="@+id/buttonSaveTrans"
            android:layout_marginLeft="150dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save" />

    </LinearLayout>



</LinearLayout>